tests/baselines/reference/computedPropertyNames14.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames14.ts(3,5): error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames14.ts(4,12): error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames14.ts(5,5): error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames14.ts(6,12): error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames14.ts(7,5): error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames14.ts(8,12): error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames14.ts (6 errors) ====
    var b: boolean;
    class C {
        [b]() {}
        ~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
        static [true]() { }
               ~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
        [[]]() { }
        ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
        static [{}]() { }
               ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
        [undefined]() { }
        ~~~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
        static [null]() { }
               ~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'Symbol', or 'any'.
    }